// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`brainAtlas render goldens > detail panel: cerebellum (ACCURACY LOCK — ~80%, not 50%) 1`] = `
{
  "buttons": 61,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 156,
  "sha": "9d42bf643ec17e3e",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > detail panel: dopamine (ACCURACY LOCK — no "pleasure chemical" overclaim) 1`] = `
{
  "buttons": 63,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 187,
  "sha": "a2e10163a6b42f1d",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > quiz mode renders a question + options 1`] = `
{
  "buttons": 61,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 143,
  "sha": "e89eb78b820ed8aa",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: basalGangliaLoop renders + pins a digest 1`] = `
{
  "buttons": 60,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 188,
  "sha": "fe288099c4ec7fa3",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: brainstemCrossSection renders + pins a digest 1`] = `
{
  "buttons": 56,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 170,
  "sha": "a908078d1742c232",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: cerebellumClinic renders + pins a digest 1`] = `
{
  "buttons": 56,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 169,
  "sha": "c26b3419f3eb4ae2",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: cranialNervesWillis renders + pins a digest 1`] = `
{
  "buttons": 65,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 203,
  "sha": "4645dd765fb31c6e",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: crossLateral renders + pins a digest 1`] = `
{
  "buttons": 56,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 172,
  "sha": "a5873876eb39ed1e",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: csfHydrocephalus renders + pins a digest 1`] = `
{
  "buttons": 56,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 171,
  "sha": "68936c3de33f1375",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: eegWaves renders + pins a digest 1`] = `
{
  "buttons": 63,
  "canvases": 2,
  "inputs": 1,
  "lengthBucket": 180,
  "sha": "4e48bb540912db84",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: homunculus renders + pins a digest 1`] = `
{
  "buttons": 58,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 167,
  "sha": "318dabfe05b61956",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: inferior renders + pins a digest 1`] = `
{
  "buttons": 65,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 178,
  "sha": "b00527b6670c2858",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: languageNetwork renders + pins a digest 1`] = `
{
  "buttons": 62,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 186,
  "sha": "3a37c040b6566967",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: lateral renders + pins a digest 1`] = `
{
  "buttons": 70,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 197,
  "sha": "2d2ffaa727c542a5",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: limbicPapezLoop renders + pins a digest 1`] = `
{
  "buttons": 63,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 203,
  "sha": "892b725a3ab5b58e",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: medial renders + pins a digest 1`] = `
{
  "buttons": 69,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 194,
  "sha": "1fced239675ad23e",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: neuron renders + pins a digest 1`] = `
{
  "buttons": 56,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 174,
  "sha": "540288f6e19c4221",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: neurotransmitters renders + pins a digest 1`] = `
{
  "buttons": 77,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 262,
  "sha": "dd69ca8f64184b84",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > view: prenatalDevelopment renders + pins a digest 1`] = `
{
  "buttons": 57,
  "canvases": 1,
  "inputs": 2,
  "lengthBucket": 166,
  "sha": "5be388ae90775be0",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: sleepStages renders + pins a digest 1`] = `
{
  "buttons": 54,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 160,
  "sha": "8980dbdfa13a4288",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: stimulate renders + pins a digest 1`] = `
{
  "buttons": 59,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 176,
  "sha": "05982f647ef8c433",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: strokeTerritories renders + pins a digest 1`] = `
{
  "buttons": 56,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 170,
  "sha": "02316a0d3cb14ccd",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: superior renders + pins a digest 1`] = `
{
  "buttons": 62,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 163,
  "sha": "0b83037978900fe9",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: synapses renders + pins a digest 1`] = `
{
  "buttons": 55,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 161,
  "sha": "140a8d7c32aab4f7",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: visualPathway renders + pins a digest 1`] = `
{
  "buttons": 61,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 182,
  "sha": "4976c780266d869a",
  "svgs": 0,
}
`;
